@@ -37,7 +37,8 @@ export(heplot, heplot3d, heplot1d, ellipse3d.axes, mark.H0, cross3d,
       covEllipses,
       colDevs,
       logdetCI,
-    	bartlettTests, leveneTests
+    	bartlettTests, leveneTests,
+    	Mahalanobis
   	)
 
 S3method(heplot, mlm)
